fixed css + js for connect component and toggle method to toggle height/visibility (with transition) instead of display

--- a/src/assets/css/connect.scss
+++ b/src/assets/css/connect.scss
@@ -2,6 +2,12 @@
     position: fixed;
     width: 100%;
     left: 0;
+    // transition: 0.5s height;
+
+    #connect--outer {
+        height: 100%;
+        transition: 0.5s height, 0.5s visibility;
+    }
 
     .--outer {
         width: 55%;
